src/polychem/snapshots/smithereens__polychem__chemical_database__tests__decimal_from_bool.snap
---
source: src/polychem/chemical_database.rs
expression: "&res.unwrap_err().related().unwrap().next().unwrap()"
---
Unsupported {
    span: Span(
        9,
        13,
    ),
    message: "expected a decimal number, found boolean",
}
