src/polychem/snapshots/smithereens__polychem__chemical_database__tests__decimal_illegal_type.snap
---
source: src/polychem/chemical_database.rs
expression: out
---
  × error parsing KDL

Error:   × no type for Decimal, found pi
   ╭─[test:1:10]
 1 │ lossless (pi)3.14
   ·          ──┬─
   ·            ╰── unexpected type name
   ╰────

