src/polychem/snapshots/smithereens__polychem__chemical_database__tests__decimal_lack_of_precision.snap
---
source: src/polychem/chemical_database.rs
expression: out
---
  × error parsing KDL

Error:   × Scale exceeds the maximum precision allowed: 42 > 28
   ╭─[test:1:10]
 1 │ lossless 1e-42
   ·          ──┬──
   ·            ╰── invalid value
   ╰────

