src/polychem/snapshots/smithereens__polychem__chemical_database__tests__double_uppercase_element_symbol.snap
---
source: src/polychem/chemical_database.rs
expression: out
---
  × error parsing KDL

Error:   × expected a single uppercase ASCII letter optionally followed by a
  │ lowercase ASCII letter, got "DT"
   ╭─[test:1:1]
 1 │ DT "Deuterium" {
   · ─┬
   ·  ╰── invalid value
 2 │   isotope 2 2.01410177812 1
   ╰────

